Revert "Fix filebeat.yml template for version 7.x (#84)"
This reverts commit 3446581e7c54423cb87fc7915f4b54e85134caa6.

--- a/templates/filebeat-7.yml
+++ b/templates/filebeat-7.yml
@@ -1,7 +1,7 @@
 # WARNING! This file is managed by Juju. Edits will not persist.
 # Edit at your own risk
 filebeat:
-  registry.path: /var/lib/filebeat/registry
+  registry_file: /var/lib/filebeat/registry
   inputs:
     - type: log
       paths:
