--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -30,3 +30,7 @@ bases:
         channel: "18.04"
         architectures:
           - amd64
+      - name: ubuntu
+        channel: "16.04"
+        architectures:
+          - amd64
