--- a/templates/filebeat-7.yml
+++ b/templates/filebeat-7.yml
@@ -16,6 +16,8 @@ filebeat:
       scan_frequency: 10s
       harvester_buffer_size: {{ harvester_buffer_size }}
       max_bytes: {{ max_bytes }}
+      ignore_older: {{ ignore_older }}
+      clean_inactive: {{ clean_inactive }}
       fields_under_root: false
       fields:
         type: logpath-logs
