Add a minimal CI setup and pass CI tests

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = lint, unit, func
 [testenv]
 basepython = python3
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/lib/:{toxinidir}/src/
+  PYTHONPATH = {toxinidir}:{toxinidir}/reactive/
 passenv =
   HOME
   PATH
@@ -43,6 +43,7 @@ commands =
     black --check --diff --color .
     isort --check --diff --color .
 deps =
+    charmhelpers
     black
     pylint
     mypy
@@ -54,7 +55,6 @@ deps =
     colorama
     isort
     {[testenv:unit]deps}
-    {[testenv:func]deps}
 
 [testenv:reformat]
 envdir = {toxworkdir}/lint
@@ -67,5 +67,6 @@ deps = {[testenv:lint]deps}
 commands = pytest {toxinidir}/tests/unit \
     {posargs:-v --cov --cov-report=term-missing --cov-report=html --cov-report=xml}
 deps =
+    gevent
     pytest
     pytest-cov
