Disable coverage checks

--- a/tox.ini
+++ b/tox.ini
@@ -65,8 +65,6 @@ deps = {[testenv:lint]deps}
 
 [testenv:unit]
 commands = pytest {toxinidir}/tests/unit \
-    {posargs:-v --cov --cov-report=term-missing --cov-report=html --cov-report=xml}
+    {posargs:-v}
 deps =
-    gevent
     pytest
-    pytest-cov
