Fully remove functional tests from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist=True
-envlist = lint, unit, func
+envlist = lint, unit
 
 [testenv]
 basepython = python3
@@ -28,7 +28,6 @@ deps =
   pre-commit
   {[testenv:lint]deps}
   {[testenv:unit]deps}
-  {[testenv:func]deps}
 
 [testenv:pre-commit]
 envdir = {[testenv:dev-environment]envdir}
