--- a/tox.ini
+++ b/tox.ini
@@ -55,3 +55,11 @@ commands = echo "no unit tests"
 deps =
     pytest
     charmhelpers
+
+[testenv:func]
+allowlist_externals =
+    echo
+commands = echo "no func tests"
+deps =
+    pytest
+    charmhelpers
