Fix charm release
- update to latest release of charming-actions,
  which includes support for uploading all charm files (not just one).
  ref. https://github.com/canonical/charming-actions/pull/131
  This is required as this charm builds one charm file for each base.
- Pin charmcraft to v2 for promote and release workflows,
  because the check workflow tests with v2,
  and we haven't tested support for charmcraft v3 yet.

--- a/.github/workflows/promote.yaml
+++ b/.github/workflows/promote.yaml
@@ -17,9 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Release charm to channel
-        uses: canonical/charming-actions/release-charm@2.4.0
+        uses: canonical/charming-actions/release-charm@2.7.0
         with:
           credentials: ${{ secrets.CHARMHUB_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           destination-channel: ${{ github.event.inputs.destination-channel }}
           origin-channel: ${{ github.event.inputs.origin-channel }}
+          charmcraft-channel: "2.x/stable"
